Fix scrollbars appearing issue

--- a/wandb/board/ui/src/App.css
+++ b/wandb/board/ui/src/App.css
@@ -1,6 +1,6 @@
-body {
+/* body {
   overflow-x: auto !important;
-}
+} */
 
 #root > div {
   display: flex;
